--- a/TestAppSMS/bin/AndroidManifest.xml
+++ b/TestAppSMS/bin/AndroidManifest.xml
@@ -2,8 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.testappsms"
     android:versionCode="1"
-    android:versionName="1.0" >
-
+    android:versionName="1.0"
+    >
+    
     <uses-sdk
         android:minSdkVersion="10"
         android:targetSdkVersion="10" />
@@ -13,10 +14,14 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:configChanges="orientation"
+        
+         >
         <activity
             android:name="com.example.testappsms.MainActivity"
             android:label="@string/app_name" >
+            
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
